# py-fizzbuzz

./: .gitignore  README.md  pyproject.toml
apps/: fizzbuzz.py
tests/: test_fizzbuzz.py
