[tool.poetry]
name = "py-fizzbuzz"
version = "0.1.0"
description = ""
authors = ["cm-fujikawa <fujikawa.takuji@classmethod.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
